[package]
name = "goki"
version = "0.1.0-alpha.0"
description = "Goki command line interface."
homepage = "https://goki.so"
repository = "https://github.com/GokiProtocol/goki-cli"
authors = ["Goki Rajesh <goki@goki.so>"]
license = "AGPL-3.0"
edition = "2021"
keywords = ["solana", "goki", "cli"]

[dependencies]
anyhow = "1.0.42"
anchor-client = "0.19.0"
cargo_toml = "0.9.2"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
colored = "2"
heck = "0.3.1"
reqwest = "0.11.7"
semver = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.9.4" }
serde_json = "1.0"
shellexpand = "2.1.0"
solana-sdk = "1.9.0"
strum = "0.23.0"
strum_macros = "0.21"
tempfile = "3.2.0"
toml = "0.5.8"
tokio = { version = "1.14.0", features = ["full"] }

[[bin]]
name = "goki"
path = "src/bin/main.rs"
