[package]
name = "goki"
version = "0.1.3"
description = "Goki command line interface."
homepage = "https://goki.so"
repository = "https://github.com/GokiProtocol/goki-cli"
authors = ["Goki Rajesh <goki@goki.so>"]
license = "AGPL-3.0"
edition = "2021"
keywords = ["solana", "goki", "cli"]

[dependencies]
anchor-client = "0.19.0"
anyhow = "1.0.42"
cargo_toml = "0.10.3"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
colored = "2"
data-encoding = "2.3.2"
heck = "0.3.1"
reqwest = "0.11.7"
sha2 = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.9.4" }
shellexpand = "2.1.0"
solana-sdk = "1.9.0"
tempfile = "3.2.0"
tokio = { version = "1.14.0", features = ["full"] }
toml = "0.5.8"

[[bin]]
name = "goki"
path = "src/bin/main.rs"
