[package]
name = "goki"
version = "0.2.3"
description = "Goki command line interface."
homepage = "https://goki.so"
repository = "https://github.com/GokiProtocol/goki-cli"
authors = ["Goki Rajesh <goki@goki.so>"]
license = "AGPL-3.0"
edition = "2021"
keywords = ["solana", "goki", "cli"]

[dependencies]
anchor-client = "0.24.2"
anyhow = "1.0.42"
clap = { version = "3.1.6", features = ["derive"] }
colored = "2"
data-encoding = "2.3.2"
itertools = "0.10"
reqwest = "0.11.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
solana-sdk = "1.9.0"
tempfile = "3.2.0"
toml = "0.5.8"
tokio = { version = "1.23.0", features = ["full"] }

[[bin]]
name = "goki"
path = "src/bin/main.rs"
